bad/func_call_invalid_arg_conversion_bool_to_array.example_compiler_output
ERROR
[1mbad/func_call_invalid_arg_conversion_bool_to_array.lat:3:6: [1;31merror: [0;1mvalue of type `boolean` is not convertible to type `int[]`[m
	foo(true);
	    [1;32m^[m
[1mbad/func_call_invalid_arg_conversion_bool_to_array.lat:7:1: [1;34mnote: [0;1m`foo` declared here[m
void foo(int[] a) {}
[1;32m^[m
